# open-enum

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yaml
derive/: Cargo.toml  README.md
derive/src/: config.rs  lib.rs  repr.rs
lints/: Cargo.toml
lints/src/: lib.rs
src/: lib.rs  test-lints.rs
tests/: basic.rs  derives.rs  lints.rs  ui.rs
tests/ui/: basic.rs  basic.stderr  duplicate.rs  duplicate.stderr  implicit-duplicate.rs  implicit-duplicate.stderr  lints.rs  lints.stderr  negative.rs  negative.stderr  nonliteral-duplicate.rs  nonliteral-duplicate.stderr  nonliteral-overflow.rs  nonliteral-overflow.stderr  options.rs  options.stderr  overflow.rs  overflow.stderr  types.rs  types.stderr  visibility.rs  visibility.stderr
