[package]
name = "open-enum"
version = "0.3.0"
authors = ["Alyssa Haroldsen <kupiakos@google.com>"]
description = "An attribute for generating \"open\" fieldless enums, those that accept any integer value, by using a newtype struct and associated constants"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/kupiakos/open-enum"
categories = ["no-std", "rust-patterns"]
keywords = ["enum", "open", "integer", "newtype"]
include = ["/src", "/LICENSE", "Cargo.toml"]

[features]
# This is not named libc because it would require "dep:libc",
# which doesn't work with trybuild: https://github.com/dtolnay/trybuild/issues/171.
libc_ = ["libc", "open-enum-derive/repr_c"]
std = ["open-enum-derive/repr_c"]

# Needed to test #[deny(missing_docs)], which doesn't trigger in unit or integration tests.
[[bin]]
name = "test_lints"
path = "src/test-lints.rs"

[dependencies]
open-enum-derive = { path = "derive", version = "0.3.0" }
libc = { version = "0.2", optional = true }

[dev-dependencies]
trybuild = "1"

[workspace]
members = [
    "derive",
]