[package]
name = "open-enum-derive"
version = "0.4.0"
description = "An attribute for generating \"open\" C-like enums, those that accept any integer value, by using a newtype struct and associated constants"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/kupiakos/open-enum/tree/main/derive"
categories = ["no-std", "rust-patterns"]
keywords = ["enum", "open", "integer", "newtype"]
include = ["/src", "../LICENSE", "Cargo.toml"]

[lib]
proc-macro = true

[features]
# Enable #[repr(C)] open enums
repr_c = []

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1.0.43"
